Add ability to update a leave request